fix: set package to private to prevent npm push

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@deadsimple/hyva-input-mask",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/Deadsimple-ecommerce/HyvaInputMask.git"
