--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "deadsimple/hyva-input-mask",
     "description": "A deadsimple wrapper to use the input mask plugin from AlpineJs directly in you Hyvä theme and forms",
+    "version": "1.0.0",
     "type": "magento2-module",
     "license": "MIT",
     "authors": [
@@ -29,6 +30,5 @@
             "/README.md",
             "/LICENSE"
         ]
-    },
-    "version": "1.0.0"
+    }
 }
